src/test/ui/error-codes/E0277-2.stderr
error[E0277]: the trait bound `*const u8: std::marker::Send` is not satisfied in `Foo`
  --> $DIR/E0277-2.rs:26:5
   |
26 |     is_send::<Foo>();
   |     ^^^^^^^^^^^^^^ `*const u8` cannot be sent between threads safely
   |
   = help: within `Foo`, the trait `std::marker::Send` is not implemented for `*const u8`
   = note: required because it appears within the type `Baz`
   = note: required because it appears within the type `Bar`
   = note: required because it appears within the type `Foo`
note: required by `is_send`
  --> $DIR/E0277-2.rs:23:1
   |
23 | fn is_send<T: Send>() { }
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0277"
